--- a/css/main.css
+++ b/css/main.css
@@ -778,6 +778,7 @@ h3 {
   -ms-flex: 0 1 50%;
   flex: 0 1 50%;
   padding-bottom: 50%;
+  border-radius: 30px;
 }
 @media (max-width: 1024px) {
   .hero__image {
